# advent-of-code

./: .gitignore  pyproject.toml
data/: day_09_toy_2.txt  day_15.txt
src/: day_01.py  day_02.py  day_03.py  day_04.py  day_05.py  day_06.py  day_07.py  day_08.py  day_09.py  day_09_2.py  day_10.py  day_11.py  day_12.py  day_12_2.py  day_12_3.py  day_13.py  day_14.py  day_15.py  day_15_2.py  day_16.py  day_16_2.py  day_17.py  day_18.py  day_19.py  day_20.py  day_20_2.py  day_21.py  day_22.py  day_23.py  day_24.py  day_25.py
