[project]
name = "advent-of-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "networkx>=3.4.2",
    "numpy>=2.1.3",
    "plotnine>=0.14.3",
    "polars>=1.16.0",
    "pyarrow>=18.1.0",
    "rich>=13.9.4",
    "tqdm>=4.67.1",
]

[tool.uv]
dev-dependencies = [
    "pre-commit>=4.0.1",
]
